AM_CPPFLAGS = \
	`freetype-config --cflags`

bin_PROGRAMS = arkilloid-leveledit
noinst_HEADERS = \
	Brick.h \
	Button.h \
	Constants.h \
	Frame.h \
	SDLUtils.h \
	Texture.h \
	Timer.h
arkilloid_leveledit_SOURCES = \
	main.cpp \
	Brick.cpp \
	Button.cpp \
	Frame.cpp \
	SDLUtils.cpp \
	Texture.cpp \
	Timer.cpp \
	../extern/GLFT_Font/GLFT_Font.cpp
