AM_CPPFLAGS = \
	`freetype-config --cflags` \
	-DDATADIR='"${datadir}"'

bin_PROGRAMS = arkilloid-leveledit
noinst_HEADERS = \
	file.h \
	Brick.h \
	Button.h \
	Constants.h \
	Frame.h \
	SDLUtils.h \
	Texture.h \
	Timer.h
	../extern/GLFT_Font/GLFT_Font.h
arkilloid_leveledit_SOURCES = \
	main.cpp \
	file.cpp \
	Brick.cpp \
	Button.cpp \
	Frame.cpp \
	SDLUtils.cpp \
	Texture.cpp \
	Timer.cpp \
	../extern/GLFT_Font/GLFT_Font.cpp
